--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "api": "node server/server.js",
+    "compodoc": "npx compodoc -p tsconfig.json -s"
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": ["<rootDir>/setup-jest.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jest.ts"
+    ],
     "globalSetup": "jest-preset-angular/global-setup"
   },
   "private": true,
@@ -40,6 +44,7 @@
     "jasmine-core": "~4.1.0",
     "jest": "^28.1.2",
     "jest-preset-angular": "^12.1.0",
+    "jsonwebtoken": "^8.5.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
